# LA

./: .gitignore  CMakeLists.txt  LICENSE
include/: linear_algebra.hpp  matrix.hpp  vector.hpp
scripts/: rebuild_and_test.sh  test.sh
src/: matrix.cpp  vector.cpp
test/: test.cpp
